--- a/update-config.json
+++ b/update-config.json
@@ -2,7 +2,7 @@
   "Configurations": [
     {
       "Version": "2.0.0",
-      "URL": "https://example.com/myimages/example.esp32_dev.v2.bin"
+      "URL": "https://example.com/myimages/firmwareVer2.bin"
     }
   ]
 }
