--- a/update-config.json
+++ b/update-config.json
@@ -1,8 +1,9 @@
 {
-  "Configurations": [
-    {
+    "Configurations": [
+      {
+      "Board": "ESP32_DEV",
       "Version": "2.0.0",
       "URL": "https://github.com/fbillowes/Testing-Grounds/blob/main/firmwareVer2.bin"
-    }
-  ]
-}
+      }
+    ]
+  }
