--- a/update-config.json
+++ b/update-config.json
@@ -3,7 +3,8 @@
       {
       "Board": "ESP32_DEV",
       "Version": "2.0.0",
-      "URL": "https://github.com/fbillowes/Testing-Grounds/raw/main/firmwareVer2.bin"
+      "URL": "https://raw.githubusercontent.com/fbillowes/Testing-Grounds/main/firmwareVer2.bin"
       }
     ]
   }
+  
