--- a/update-config.json
+++ b/update-config.json
@@ -3,7 +3,7 @@
       {
 
       "Version": "6.0.0",
-      "URL": "https://raw.githubusercontent.com/fbillowes/Testing-Grounds/main/firmwareVer4.bin"
+      "URL": "https://raw.githubusercontent.com/fbillowes/Testing-Grounds/main/Tether_0_9.ino.esp32"
       }
     ]
   }
